cargo-features = ["strip"]

[package]
name = "gitstat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "^0.13"
structopt = "^0.3"
time = "0.1.39"
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.72"
chrono = "0.4.19"

[profile.release]
opt-level = 3
lto = true
strip = 'symbols'
codegen-units = 1
overflow-checks = false
